[gd_scene load_steps=8 format=3 uid="uid://dlud8ju4fsxo8"]

[ext_resource type="Script" path="res://Wine/grape.gd" id="1_185mw"]
[ext_resource type="Texture2D" uid="uid://b7gtpgntwnkr4" path="res://Wine/grapes.png" id="2_f5jgh"]
[ext_resource type="Texture2D" uid="uid://b34i012ei5c8c" path="res://Wine/squashed_grapes.png" id="3_lsegc"]
[ext_resource type="Texture2D" uid="uid://ckyay126e4kjn" path="res://FishTank/fish-asset/speech-bubble-thought-bubble-comic-bubble-transparent-free-free-png.png" id="3_wujgj"]
[ext_resource type="AudioStream" uid="uid://cmimwy8j6kso2" path="res://Wine/GrapesSquishLow.mp3" id="5_6q2rx"]
[ext_resource type="AudioStream" uid="uid://bwsjlww7uo1e0" path="res://Wine/GrapesSquishHigh.mp3" id="6_gsd5t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qbq2e"]
radius = 285.797

[node name="Grape" type="Area2D"]
script = ExtResource("1_185mw")

[node name="Grapes" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_f5jgh")

[node name="SquishedGrapes" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("3_lsegc")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(42, 22)
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_qbq2e")

[node name="WhineContainer" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="Sprite2D" type="Sprite2D" parent="WhineContainer"]
position = Vector2(62, -60)
scale = Vector2(0.076, 0.076)
texture = ExtResource("3_wujgj")

[node name="WhineLabel" type="Label" parent="WhineContainer"]
offset_left = 15.0
offset_top = -79.0
offset_right = 110.0
offset_bottom = -56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "OW"
horizontal_alignment = 1

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="squish1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_6q2rx")

[node name="squish2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_gsd5t")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
